--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -79,7 +79,10 @@ body {
     border-radius: 165px;
     overflow: hidden;
     background-color:black;
-    margin: 23px;
+    margin-left: 65px;
+    margin-right: 65px;
+    margin-top: 35px;
+    margin-bottom: 35px;
     
 }
 
@@ -103,7 +106,8 @@ body {
 
 h3 {
 
-    margin: 23px;
+    margin-right: 65px;
+    margin-left: 65px;
     width: 165px;
     text-align: center;
 
