--- a/assets/style/categorias.css
+++ b/assets/style/categorias.css
@@ -5,8 +5,82 @@
 
 }
 
-.teste {
+body {
 
-    height: 1000px;
+    background-color: rgb(235, 235, 235);
+
+}
+
+section {
+
+    display: flex;
+    justify-content: space-evenly;
+    margin: 50px;
+
+}
+
+#menu {
+
+    border-radius: 15px;
+    background-color: rgb(255, 255, 255);
+    width: 250px;
+    height: 500px;
+
+}
+
+#menu h1 {
+
+    padding-top: 10px;
+    text-align: center;
+    font-size: 30px;
+
+}
+
+#lista {
+
+    font-size: 16px;
+    line-height: 28px;
+
+}
+
+#lista a {
+
+    text-decoration: none;
+    color: black;
+  
+}
+
+#lista a:hover {
+
+    color: rgb(185, 185, 185);
+
+}
+
+ul {
+
+    padding-inline-start: 30px;
+
+}
+
+#lista ul {
+
+    list-style: none;
+
+}
+
+#produtos {
+
+    background-color: rgb(255, 255, 255);
+    width: 1200px;
+    border-radius: 15px;
+    display: flex;
+    justify-content: space-around;
+
+}
+
+#produtos h1 {
+
+    padding: 50px;
+    padding-top: 10px;
 
 }
